feat(domain): mapa tiempo-ancla para reproduccion sincronizada (#42, D12) (#90)
